--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "videostoreapp",
   "version": "1.0.0",
   "description": "Video Store app ",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "node server"
   },
   "dependencies": {
     "bcryptjs": "*",
